--- a/module/MyBlog/view/my-blog/blog/edit.phtml
+++ b/module/MyBlog/view/my-blog/blog/edit.phtml
@@ -1,17 +1,18 @@
 <?php
-$title = 'Add new blogpost';
+$title = 'Edit blogpost';
 $this->headTitle($title);
 ?>
     <h1><?php echo $this->escapeHtml($title); ?></h1>
 <?php
 $form = $this->form;
-$form->setAttribute('action', $this->url('blog', array('action' => 'add')));
+$form->setAttribute('action', $this->url('blog', array('action' => 'edit')));
 $form->prepare();
 
 echo $this->form()->openTag($form);
 echo $this->formRow($form->get('security'));
 echo $this->formHidden($form->get('id'));
 echo $this->formHidden($form->get('userId'));
+echo $this->formHidden($form->get('created'));
 echo $this->formRow($form->get('title'));
 echo $this->formRow($form->get('text'));
 echo $this->formRow($form->get('state'));
