--- a/module/MyBlog/view/my-blog/blog/index.twig
+++ b/module/MyBlog/view/my-blog/blog/index.twig
@@ -1,24 +1,37 @@
 {% extends 'layout/layout.twig' %}
 
 {% block content %}
-    <ul>
-    {% if isAllowed('controller\/MyBlog\\Controller\\BlogPost:edit') %}
-        {% for post in posts %}
-            <li>
-                <a href="{{ url('blog', {'action': 'view', 'id': post.id}) }}">{{ post.title|e }}</a>
-                [{{ post.created|date('d.m.Y H:i') }}]
-                <a href="{{ url('blog', {'action': 'edit', 'id': post.id}) }}">edit</a>,
-                <a href="{{ url('blog', {'action': 'delete', 'id': post.id}) }}">delete</a>
-                {% if post.state == false %} [UNPUBLISHED]{% endif %}
-            </li>
-        {% endfor %}
-    {% else %}
-        {% for post in posts %}
-            <li>
-                <a href="{{ url('blog', {'action': 'view', 'id': post.id}) }}">{{ post.title|e }}</a>
-                [{{ post.created|date('d.m.Y H:i') }}]
-            </li>
-        {% endfor %}
+    {% if isAllowed('controller\/MyBlog\\Controller\\BlogPost:add') %}
+        <a href="{{ url('blog', {'action': 'add'}) }}" class="btn btn-primary">add post!</a>
+        <hr>
     {% endif %}
+
+    <ul>
+        {% if isAllowed('controller\/MyBlog\\Controller\\BlogPost:edit') %}
+            {% for post in posts %}
+                <li>
+                    <h3>
+                        <a href="{{ url('blog', {'action': 'view', 'id': post.id}) }}">
+                            {{ post.title|e }}</a>
+                    </h3>
+
+                    [{{ post.created|date('d.m.Y H:i') }}]
+                    <a href="{{ url('blog', {'action': 'edit', 'id': post.id}) }}"
+                       class="btn btn-warning">
+                        edit</a>,
+                    <a href="{{ url('blog', {'action': 'delete', 'id': post.id}) }}"
+                       class="btn btn-primary">
+                        delete</a>
+                    {% if post.state == false %} [UNPUBLISHED]{% endif %}
+                </li>
+            {% endfor %}
+        {% else %}
+            {% for post in posts %}
+                <li>
+                    <a href="{{ url('blog', {'action': 'view', 'id': post.id}) }}">{{ post.title|e }}</a>
+                    [{{ post.created|date('d.m.Y H:i') }}]
+                </li>
+            {% endfor %}
+        {% endif %}
     </ul>
 {% endblock content %}
